Agrego autenticacion a los metodos de la api
